Infrastructure/AwsConceptsApp/Terraform/EcsLoadBalancing.tf
resource "aws_lb" "application" {
  name               = "${var.APPLICATION_NAME}-${var.ENV_NAME}-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = [aws_subnet.public.id]

  # Include other configurations...
}

resource "aws_lb_target_group" "appserver" {
  name     = "${var.APPLICATION_NAME}-${var.ENV_NAME}-appserver"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  health_check {
    enabled             = true
    interval            = 30
    path                = "/"
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.application.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.appserver.arn
  }
}
